
* Enhancements:
  * Upgraded rb-readline to version 0.4.1
  * Upgraded DevKit mintty to version 1.0.1
  * Upgraded DevKit binutils to version 2.21.53
  * Upgraded DevKit gdb to version 7.3-2
  * Upgraded libffi to version 3.0.10
  * Upgraded DevKit mingwrt to 3.20
  * Upgraded OpenSSL to version 1.0.0e
  * Add GnuWin32 which.exe to relevant DevKit's
  * Add tdm-32-4.6.1 toolchain support

* Bugfixes:
  * Correct DevKit install path search behavior. GH-80
  * Avoid forcing users to clone with autocrlf=false. GH-71, GH-78 and GH-84
  * Correct extraction of SHA1 based tarballs
  * No longer leak LDFLAGS into sandboxed rbconfig.rb. GH-85

=== 2011-07-15

* Enhancements:
  * Upgraded Ruby 1.9.2 to patchlevel 290
  * Upgraded libyaml to 0.1.4 in Ruby 1.9

=== 2011-07-12

* Enhancements:
  * Upgraded Ruby 1.9.2 to patchlevel 180
  * Upgraded Ruby 1.8.7 to patchlevel 352
  * Upgraded RubyGems to 1.7.2 on all versions of Ruby
  * Upgraded rb-readline to version 0.4.0
  * Upgraded OpenSSL to 1.0.0d on all versions of Ruby
  * Build Ruby using GCC 4.5.2 (TDM-1 release)
  * Enable unsupported builds with 32-bit MinGW-w64
  * Change from MIT license to Modified BSD License (3-clause)
  * Add support for Tcl/Tk 8.5.10 in recipes, installers, and archives

* Bugfixes:
  * Be specific about version of RDoc and RDoc CHM required. GH-58

* Deprecations:
  * Installers now enforces Windows XP as minimum OS. GH-54

=== 2010-12-25

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 330
  * Upgraded Ruby 1.9.2 to patchlevel 136
  * Build all versions of Ruby using GCC 4.5.1 (TDM-1 release)
  * Discourage users to attempt installing Ruby into Program Files. GH-34

=== 2010-08-18

* Enhancements:
  * Upgraded Ruby 1.9.2 to final (p0)
  * Speed up compilation process (reduce copy over copy)
  * Usage of extracted devkit to compile everything

=== Final / 2010-06-06

* Enhancements:
  * Installers now record version information in the registry [jonforums]