@@ -12,6 +12,7 @@ module DevKitInstaller
     'tdm-32-4.5.0',
     'tdm-64-4.5.1',
     'llvm-32-2.8',
+    'mingw-32-4.6.1',
     'mingw-32-4.5.2',
     'mingw-32-3.4.5',
     'mingw64-32-4.5.4',
